--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
+    <button class="Button_primary">Button</button>
+    <button class="Button_secondary">Button</button>
     
 </body>
 </html>
