--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <button class="Button_primary">Button</button>
     <button class="Button_secondary">Button</button>
-    
+    <input class="Input_field" type="text">
 </body>
 </html>
