--- a/index.html
+++ b/index.html
@@ -5,10 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>Document</title>
-</head>
-<body>
+
+    </head>
+
+    <div class="wrapper">
+        <h1>profielfoto en naam </h1>
+
+
+        <button class="Button_primary">Button</button>
+
+
+
+  <section>  hier komen de buttons van de timer en feed record
+    met daarboven de "last feed time".
+  </section>
+    
+
+
+
+<button class="Button_primary">Button</button>
+
+<footer> 
+    Hier komt de hoeveelheid feeding 
+    en de feed knoppen
     <button class="Button_primary">Button</button>
-    <button class="Button_secondary">Button</button>
-    <input class="Input_field" type="text">
+<button class="Button_primary">Button</button>
+</footer>
+
+
+</div>
+
+<body>
+    
 </body>
 </html>
