--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <title>Document</title>
 
     </head>
-
     <div class="wrapper">
-        <h1>profielfoto en naam </h1>
+        <h1>Naam app</h1>
 
+        <figure> profielfoto gebruiker </figure>
 
-        <button class="Button_primary">Button</button>
-
-
+        <h2> Naam user </h2>
 
   <section>  hier komen de buttons van de timer en feed record
     met daarboven de "last feed time".
@@ -31,8 +29,6 @@
     <button class="Button_primary">Button</button>
 <button class="Button_primary">Button</button>
 </footer>
-
-
 </div>
 
 <body>
