--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,6 +13,8 @@
         <figure> profielfoto gebruiker </figure>
 
         <h2> Naam user </h2>
+        <button class="Button_Boven">Button_Boven</button>
+        <button class="Button_Boven">Button_Boven</button>
 
   <section>  hier komen de buttons van de timer en feed record
     met daarboven de "last feed time".
@@ -28,7 +30,35 @@
 </footer>
 </div>
 
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <title>Document</title>
+</head>
 <body>
-    
+    <div class="wrapper">
+        <h1>Naam app</h1>
+        <figure> profielfoto gebruiker </figure>
+        <h2> Naam user </h2>
+        <div class="button-container">
+            <button class="Button_Boven">Button_Boven</button>
+            <button class="Button_Boven">Button_Boven</button>
+        </div>
+        <section>  hier komen de buttons van de timer en feed record
+            met daarboven de "last feed time".
+        </section>
+        <button class="Button_primary">Button</button>
+        <footer> 
+            Hier komt de hoeveelheid feeding 
+            en de feed knoppen
+            <button class="Button_primary">Button</button>
+            <button class="Button_primary">Button</button>
+        </footer>
+    </div>
 </body>
 </html>
