timers.css toegevoegd

--- a/timers.html
+++ b/timers.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
+    <header>
+        <h1>Feeding Moments</h1>
+    </header>
     <div class="grid_container">
         <section class="timers_sect">
-            <p>hier komen de al bestaande timers</p>
+            <section class="timer_container"></section>
         </section>
         <section class="add_timer">
             <div class="grid_in_sect">
