--- a/index.html
+++ b/index.html
@@ -4,26 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <title>Voeder app</title>
 </head>
 <body>
+    <a href="inlog.html">Link naar inlog</a>
+
     <div class="wrapper">
         <h1>Naam app</h1>
+        <img src="images/profielfoto.jpg" alt="sample profile pic"> 
         <figure> profielfoto gebruiker </figure>
         <h2> Naam user </h2>
         <div class="button-container">
-            <button class="Button_Boven">Button_Boven</button>
-            <button class="Button_Boven">Button_Boven</button>
+            <button class="Button_Boven">My Account</button>
+            <button class="Button_Boven">Preferences</button>
         </div>
         <section>  hier komen de buttons van de timer en feed record
             met daarboven de "last feed time".
         </section>
-        <button class="Button_primary">Button</button>
+        <button class="Button_midden">Timer</button>
+        <button class="Button_midden">Feed Record</button>
         <footer> 
             Hier komt de hoeveelheid feeding 
             en de feed knoppen
-            <button class="Button_primary">Button</button>
-            <button class="Button_primary">Button</button>
+            <button class="Button_primary">Feed Ammount</button>
+            <button class="Button_primary">Feed!</button>
         </footer>
     </div>
 </body>
