--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="wrapper">
         <h1>Naam app</h1>
-        <img src="images/profielfoto.jpg" alt="sample profile pic"> 
+        <img src="IPMEDT5/Images/profielfoto.jpg" alt="sample profile pic"> 
         <figure> profielfoto gebruiker </figure>
         <h2> Naam user </h2>
         <div class="button-container">
