--- a/inlog.html
+++ b/inlog.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="inlog.css">
     <title>Document</title>
+    <a href="index.html">Link naar home</a>
 </head>
 <body>
     <div class="wrapper">
-        <h1>Naam app</h1>
+        <h1>Cat Feeder App</h1>
+        <img src="Images/catimage.png" alt="sample profile pic"> 
         <figure> logo van onze app? </figure>
         <h2> Enter your username and email </h2>
         <div class="button-container">
