--- a/inlog.html
+++ b/inlog.html
@@ -11,12 +11,12 @@
     <div class="wrapper">
         <h1>Cat Feeder App</h1>
         <img src="Images/catimage.png" alt="sample profile pic"> 
-        <h2> Enter your username and email </h2>
+
+        <h2> Enter your name </h2>
         <div class="button-container">
-            <button class="Button_Boven"> input field Username</button>
+            <button class="Button_Boven">Username</button>
         </div>
-        <section>  Trouble singing in? click here
-        </section>
+
         <footer> 
             <button class="Button_primary">Login</button>
         </footer>
