--- a/inlog.html
+++ b/inlog.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="inlog.css">
     <title>Document</title>
     <a href="index.html">Link naar home</a>
+    <a href="timers.html">Link naar Timers</a>
 </head>
 <body>
     <div class="wrapper">
