--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="inlog.html">Link naar inlog</a>
+    <a href="timers.html">Link naar Timers</a>
 
     <div class="wrapper">
         <h1>Cat feeder app</h1>
