--- a/timers.html
+++ b/timers.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="timers.css">
     <title>Document</title>
+    <a href="inlog.html">Link naar inlog</a>
+    <a href="index.html">Link naar home</a>
 </head>
 
 <body>
