--- a/inlog.html
+++ b/inlog.html
@@ -15,7 +15,10 @@
 
         <h2> Enter your name </h2>
         <div class="button-container">
+            <form>
+            <input type="text" id="username" name="username" placeholder="Enter Username" >
             <button class="Button_Boven">Username</button>
+        </form>
         </div>
 
         <footer> 
