--- a/timers.html
+++ b/timers.html
@@ -18,7 +18,13 @@
     <div class="grid_container">
         <section class="timers_sect">
             <section class="timer_container">
-                <p class="time">10:00 </p>
+                <p class="time">10:00</p>
+            </section>
+            <section class="timer_container">
+                <p class="time">13:00</p>
+            </section>
+            <section class="timer_container">
+                <p class="time">18:30</p>
             </section>
         </section>
         <section class="add_timer">
