styiling paginog problemen met database onderdelen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <a href="inlog.html">Link naar inlog</a>
     <a href="timers.html">Link naar Timers</a>
+    <a href="pagina.html">Link naar pagina</a>
 
     <div class="wrapper">
         <h1>Cat feeder app</h1>
